# iterMAG

./: .gitignore  LICENSE  README.md  create_structure.sh  environment.yml  pyproject.toml
src/iterMAG.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/itermag/: cli.py  workflow.py
src/itermag/workflow/: Snakefile
src/itermag/workflow/envs/: checkm.yaml
src/itermag/workflow/rules/: assembly.smk  binning.smk  checkm.smk  map_reads_mags.smk  readmapping.smk  symlink.smk  warm_start.smk
tests/: itermag-test-45951885.out  itermag-test-45951938.out  itermag-test-45952004.out  itermag-test-45952293.out  itermag-test-45956339.out  itermag-test-45956498.out  itermag-test-45973273.out  itermag-test-45973285.out  itermag-test-45973293.out  submit_test.sh
tests/.snakemake/iocache/: latest.pkl
